# ai_pdf_talk

./: .gitignore  pyproject.toml
pdf_talk/: convert.py  convert_pdf_db.py
